--- a/WebApp/Pages/Shared/_Layout.cshtml
+++ b/WebApp/Pages/Shared/_Layout.cshtml
@@ -10,11 +10,9 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">Trains</a>
-            </div>
-        </nav>
+        <div class="bg-black text-white border-bottom box-shadow mb-3 p-3">
+            <img alt="DealerOn" src="~/img/2x-dealeron-logo-white-1.webp" /> <span class="navbar-brand">Coding Test - Trains</span>
+        </div>
     </header>
     <div class="container">
         <main role="main" class="pb-3">
@@ -28,7 +26,6 @@
         </div>
     </footer>
 
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/lib/vue/vue.global.prod.js"></script>
     <script src="~/lib/axios.min.js"></script>
