Error check for 0-length track input. Minor visual touch-ups.

--- a/WebApp/Pages/Shared/_Layout.cshtml
+++ b/WebApp/Pages/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - DealerOn Coding Test</title>
+    <title>@ViewData["Title"] - DealerOn Coding Test Submission - Chris Hellkamp</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/WebApp.styles.css" asp-append-version="true" />
@@ -11,7 +11,9 @@
 <body>
     <header>
         <div class="bg-black text-white border-bottom box-shadow mb-3 p-3">
-            <img alt="DealerOn" src="~/img/2x-dealeron-logo-white-1.webp" /> <span class="navbar-brand">Coding Test - Trains</span>
+            <img alt="DealerOn" src="~/img/2x-dealeron-logo-white-1.webp" />
+            <span class="navbar-brand mb-5">Coding Test Submission - Trains</span>
+            <span class="navbar-brand mb-5">Chris Hellkamp</span>
         </div>
     </header>
     <div class="container">
@@ -22,7 +24,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            DealerOn Coding Test
+            DealerOn Coding Test Submission - Chris Hellkamp
         </div>
     </footer>
 
