--- a/WebApp/Pages/Index.cshtml
+++ b/WebApp/Pages/Index.cshtml
@@ -8,7 +8,7 @@
     <h2>Input</h2>
     <div class="container">
         <div class="row">
-            <div class="col-5">
+            <div class="col-lg-5">
                 <div>
                     Enter any number of track definitions, separated by commas, for a set of stations <strong>A</strong>-<strong>E</strong>.
                     A track definition is the start station, end station, and distance (positive whole number).
@@ -25,7 +25,7 @@
             </div>
         </div>
         <div class="row mt-3">
-            <div class="col-5 text-end">
+            <div class="col-lg-5 text-end">
                 <button v-on:click="submitInput" class="btn btn-primary">Submit</button>
             </div>
         </div>
